<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFrameCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#052836"
    android:windowSoftInputMode="stateUnchanged"
    tools:context=".FragmentCadastro">


    <LinearLayout
        android:id="@+id/linearLayoutCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:hint="@string/hint_label_nome"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="@color/secondaryColor"

            app:counterEnabled="true"
            app:counterMaxLength="80"
            app:counterTextColor="@color/terciarioPrimaryColor"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/requerido"
            app:helperTextEnabled="true"

            app:helperTextTextColor="@color/terciarioPrimaryColor"
            app:hintTextColor="@color/secondaryDarkColor"
            app:placeholderText="@string/placeholder_nome"

            app:startIconContentDescription="@string/nome"
            app:startIconDrawable="@drawable/ic_face_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:elegantTextHeight="true"
                android:focusable="true"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/secondaryDarkColor"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutClasse"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:hint="@string/hint_classe"

            app:boxStrokeColor="@color/secondaryColor"
            app:errorEnabled="true"

            app:helperText="@string/requerido"

            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/terciarioPrimaryColor"
            app:hintTextColor="@color/secondaryDarkColor"
            app:startIconContentDescription="@string/nome"
            app:startIconDrawable="@drawable/ic_groups_24px">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:elegantTextHeight="true"
                android:inputType="none"
                tools:ignore="LabelFor"></AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="32dp"
            android:text="@string/button_cadastrar"
            app:elevation="5dp"
            app:icon="@drawable/ic_done_all_24px" />

    </LinearLayout>

</ScrollView>